tests/algorithms/transpiler/Zig/greedy_methods/best_time_to_buy_and_sell_stock.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/greedy_methods/best_time_to_buy_and_sell_stock.zig:36:99: error: slice of single-item pointer must be bounded
        std.debug.print("{s}\n", .{_str(max_profit(@constCast(&(([6]i64{7, 1, 5, 3, 6, 4})[0..6]))[0..]))});
                                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
referenced by:
    main: /opt/zig-0.14.0/lib/std/start.zig:647:22
    comptime: /opt/zig-0.14.0/lib/std/start.zig:58:30
    2 reference(s) hidden; use '-freference-trace=4' to see all references